# sbe-challenge-phase5-c

./: .gitignore  CMakeLists.txt
src/: main.c
tests/data/: project_stockcsv.csv
